--- a/index.html
+++ b/index.html
@@ -9,7 +9,89 @@
 </head>
 <body>
 
-  <h1>I'm alive!</h1>
+  <div class="page-wrapper">
+  <section class="container container--header mt-xl">
+<!-- <svg class="intro" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
+  <g class="g g1" fill="none" fill-rule="evenodd">
+    <path fill="#0D7FF2" d="M14,0 C21.7319865,-1.42034288e-15 28,6.2680135 28,14 L28,28 L28,28 L14,28 C6.2680135,28 9.46895252e-16,21.7319865 0,14 C-9.46895252e-16,6.2680135 6.2680135,1.42034288e-15 14,0 Z"/>
+    <g class="e" fill="#031A30" transform="translate(4 8)">
+      <rect width="4" height="4" rx="2"/>
+      <rect width="4" height="4" x="12" rx="2"/>
+    </g>
+  </g>
+    <g class="g g2" transform="translate(32)">
+      <path fill="#FFD633" d="M0,0 L14,0 C21.7319865,-1.42034288e-15 28,6.2680135 28,14 C28,21.7319865 21.7319865,28 14,28 C6.2680135,28 9.46895252e-16,21.7319865 0,14 L0,0 L0,0 Z"/>
+      <g class="e" fill="#332900" transform="translate(8 16)">
+        <rect width="4" height="4" rx="2"/>
+        <rect width="4" height="4" x="12" rx="2"/>
+      </g>
+    </g>
+    <g class="g g3" transform="translate(0 32)">
+      <path fill="#FF4766" d="M14,0 C21.7319865,-1.42034288e-15 28,6.2680135 28,14 C28,21.7319865 21.7319865,28 14,28 L0,28 L0,28 L0,14 C-9.46895252e-16,6.2680135 6.2680135,1.42034288e-15 14,0 Z"/>
+      <g class="e" fill="#330009" transform="translate(8 8)">
+        <rect width="4" height="4" rx="2"/>
+        <rect width="4" height="4" x="12" rx="2"/>
+      </g>
+    </g>
+    <g class="g g4" transform="translate(32 32)">
+      <path fill="#DEE6ED" d="M14,0 L28,0 L28,0 L28,14 C28,21.7319865 21.7319865,28 14,28 C6.2680135,28 9.46895252e-16,21.7319865 0,14 C-9.46895252e-16,6.2680135 6.2680135,1.42034288e-15 14,0 Z"/>
+      <g class="e" fill="#121A21" transform="translate(4 16)">
+        <rect width="4" height="4" rx="2"/>
+        <rect width="4" height="4" x="12" rx="2"/>
+      </g>
+    </g>
+</svg> -->
+    
+  </section>
+  <section class="container container--header">
+    <h3 class="logo">Riccardo Buzzotta</h3>
+    <p>
+      Product Designer with a focus on Product Managent.
+    </p>
+  </section>
+
+  <section class="container container--content">
+    <h4>Welcome to my little website 👋</h4>
+    <p class="lead the-important-stuff">
+      Creator of chaos on my desk. Designing products with purpose.
+    </p>
+    <p class="the-important-stuff">
+      I work passionately in Design and Product. I dab in coding for prototyping and fun, illustration, and I am
+      passionate about all thingsStrategy, Org structure, and your upcoming OKR planning.
+    </p>
+    <p>
+      📍 Currently Senior Product Designer at Spotify, London.
+    <br />
+      📮 Interested in collaborating on side-projects or ask for advice? Contact me.
+    </p>
+  </section>
+
+  <section class="container container--content">
+    <h4>About me</h4>
+    <p>My name is Riccardo Buzzotta, currently Senior Product Designer at Spotify, based in London. Like many millenials
+      I enjoy travel, and I've grown to appreaciate brunch (my parents still can't understand the allure here). <br> But
+      what I enjoy the most is the <em>boring stuff</em>: meet friends for long walks, read, draw, import Italian
+      biscotti and other nonna goods whenever I can. 🍪
+    </p>
+
+    <h4>Let's get in touch</h4>
+    <p>Feel free to send me emails and candies at: <a
+        href="mailto:riccardo.buzzotta@gmail.com">riccardo.buzzotta@gmail.com</a>
+      or
+      <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>
+    </p>
+
+    <h4>Stalk me on</h4>
+    <p><a href="https://twitter.com/creativespooks" target="_blank">Twitter</a>&ensp;·&ensp;<a
+        href="https://dribbble.com/creativespooks" target="_blank">Dribbble</a>&ensp;·&ensp;<a
+        href="https://github.com/creativespooks" target="_blank">Github</a>&ensp;·&ensp;<a
+        href="https://instagram.com/boredoomandstuff" target="_blank">Instagram</a></p>
+  </section>
+
+  <footer class="container container--footer">
+    <p>Welcome to my little website.</p>
+  </footer>
+</div>
 
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
