--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Riccardo Buzzotta</title>
-  <meta name="description" content="Hello, I'm Riccardo, Product Designer based in London. Creator of chaos on my desk, currently at Spotify. Experienced in all things mobile, product, and cute doodles. Creator of chaos on my desk. I like to work on side projects that are exciting, sometimes quirky.">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="website.css">
-</head>
-<body>
-
-  <div class="page-wrapper">
+<div class="page-wrapper">
   <section class="container container--header mt-xl">
-<!-- <svg class="intro" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
+<svg class="intro" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
   <g class="g g1" fill="none" fill-rule="evenodd">
     <path fill="#0D7FF2" d="M14,0 C21.7319865,-1.42034288e-15 28,6.2680135 28,14 L28,28 L28,28 L14,28 C6.2680135,28 9.46895252e-16,21.7319865 0,14 C-9.46895252e-16,6.2680135 6.2680135,1.42034288e-15 14,0 Z"/>
     <g class="e" fill="#031A30" transform="translate(4 8)">
@@ -40,7 +29,7 @@
         <rect width="4" height="4" x="12" rx="2"/>
       </g>
     </g>
-</svg> -->
+</svg>
     
   </section>
   <section class="container container--header">
@@ -56,11 +45,11 @@
       Creator of chaos on my desk. Designing products with purpose.
     </p>
     <p class="the-important-stuff">
-      I work passionately in Design and Product. I dab in coding for prototyping and fun, illustration, and I am
-      passionate about all thingsStrategy, Org structure, and your upcoming OKR planning.
+      I work passionately in Design and Product. I dab in coding and prototyping for fun, illustration, and I am
+      passionate about all thingsS trategy, Org structure, and your upcoming OKR planning.
     </p>
     <p>
-      📍 Currently Senior Product Designer at Spotify, London.
+      📍 Senior Product Designer at Spotify, based in London.
     <br />
       📮 Interested in collaborating on side-projects or ask for advice? Contact me.
     </p>
@@ -68,10 +57,12 @@
 
   <section class="container container--content">
     <h4>About me</h4>
-    <p>My name is Riccardo Buzzotta, currently Senior Product Designer at Spotify, based in London. Like many millenials
-      I enjoy travel, and I've grown to appreaciate brunch (my parents still can't understand the allure here). <br> But
-      what I enjoy the most is the <em>boring stuff</em>: meet friends for long walks, read, draw, import Italian
-      biscotti and other nonna goods whenever I can. 🍪
+    <p>Creative Agency, 4-people start-up, hypergrowth company, 14K+ employees corporation, freelance Product consultant. Kind of tried them all here!</p>
+    <p>2020 goals: read even more, get some decent exercise done, and launch at least two side-projects I've been cooking up for too long.</p>
+    <p>Like many millenials
+      I enjoy travel, and I've grown to appreaciate brunch (my parents still can't understand the allure of it). <br>
+      What I enjoy the most though is the <em>boring stuff</em>. Meeting friends for long walks, read, draw, import Italian
+      biscotti and other <span title="grandma, in Italian">nonna</span> goods whenever I can. 🍪
     </p>
 
     <h4>Let's get in touch</h4>
@@ -88,15 +79,10 @@
         href="https://instagram.com/boredoomandstuff" target="_blank">Instagram</a></p>
   </section>
 
-  <footer class="container container--footer">
-    <p>Welcome to my little website.</p>
+  <footer class="container container--footer mt-xl">
+    <p> <br> </p>
+    <p>👉 
+      <em>I'm currently rebuilding my website using Gatsby to accomodate for a little blog section.</em>
+    </p>
   </footer>
 </div>
-
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
-</html>
