--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<div class="page-wrapper">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Riccardo Buzzotta</title>
+  <meta name="description" content="Hello, I'm Riccardo, Product Designer based in London. Creator of chaos on my desk, currently at Spotify. Experienced in all things mobile, product, and cute doodles. Creator of chaos on my desk. I like to work on side projects that are exciting, sometimes quirky.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="website.css">
+</head>
+<body>
+
+  <div class="page-wrapper">
   <section class="container container--header mt-xl">
 <svg class="intro" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
   <g class="g g1" fill="none" fill-rule="evenodd">
@@ -86,3 +97,11 @@
     </p>
   </footer>
 </div>
+
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
+</body>
+</html>
