--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section class="container container--content">
     <h4>About me</h4>
     <p>Creative Agency, 4-people start-up, hypergrowth company, 14K+ employees corporation, freelance Product consultant. Kind of tried them all here!</p>
-    <p>2020 goals: read even more, get some decent exercise done, and launch at least two side-projects I've been cooking up for too long.</p>
+    <p>2020 goals: read more books, get some decent exercise done, and launch at least two side-projects I've been cooking up for too long.</p>
     <p>Like many millenials
       I enjoy travel, and I've grown to appreaciate brunch (my parents still can't understand the allure of it). <br>
       What I enjoy the most though is the <em>boring stuff</em>. Meeting friends for long walks, read, draw, import Italian
@@ -93,14 +93,14 @@
   <footer class="container container--footer mt-xl">
     <p> <br> </p>
     <p>👉 
-      <em>I'm currently rebuilding my website using Gatsby to accomodate for a little blog section.</em>
+      <em>I'm currently rebuilding my website using GatsbyJS to accomodate for a little blog section.</em>
     </p>
   </footer>
 </div>
 
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+    ga('create', 'UA-146127916-1', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
