--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       Creator of chaos on my desk. Designing products with purpose.
     </p>
     <p class="the-important-stuff">
-      I work passionately in Design and Product. I dab in coding and prototyping for fun, illustration, and I am
-      passionate about all thingsS trategy, Org structure, and your upcoming OKR planning.
+      Design and Product are my daily bread and butter. I like coding and prototyping&VeryThinSpace;&emdash;&VeryThinSpace;even for fun, illustration, and I am
+      passionate about all things Strategy, Future industries, and your good 'ol upcoming OKR planning session.
     </p>
     <p>
       📍 Senior Product Designer at Spotify, based in London.
