--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       Creator of chaos on my desk. Designing products with purpose.
     </p>
     <p class="the-important-stuff">
-      Design and Product are my daily bread and butter. I like coding and prototyping&VeryThinSpace;&emdash;&VeryThinSpace;even for fun, illustration, and I am
+      Design and Product are my daily bread and butter. I like coding and prototyping&VeryThinSpace;&mdash;&VeryThinSpace;even for fun, illustration, and I am
       passionate about all things Strategy, Future industries, and your good 'ol upcoming OKR planning session.
     </p>
     <p>
