--- a/index.html
+++ b/index.html
@@ -57,12 +57,15 @@
     </p>
     <p class="the-important-stuff">
       Design and Product are my daily bread and butter. I like coding and prototyping, doodling, and I am
-      passionate about all things Strategy, Future industries, and your good 'ol upcoming OKR planning session.
+      passionate about all things Strategy, Future industries, and your good 'ol upcoming OKR planning session (you know it's coming!).
     </p>
     <p>
       📍 Senior Product Designer at Spotify, based in London.
     <br />
-      📮 Interested in collaborating on side-projects or ask for advice? Contact me.
+      📮 Interested in collaborating on side-projects or ask for advice? Write me at <a
+        href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me&body=Hi%20Riccardo%2C%0D%0A%0D%0A">riccardo.buzzotta@gmail.com</a>
+      or
+      <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>.
     </p>
   </section>
 
@@ -76,15 +79,16 @@
       biscotti and other <span title="grandma, in Italian">nonna</span> goods whenever I can. 🍪
     </p>
 
-    <h4>Let's get in touch</h4>
+<!--     <h4>Let's get in touch</h4>
     <p>Feel free to send me emails and candies at: <a
-        href="mailto:riccardo.buzzotta@gmail.com">riccardo.buzzotta@gmail.com</a>
+        href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me&body=Hi%20Riccardo%2C%0D%0A%0D%0A">riccardo.buzzotta@gmail.com</a>
       or
       <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>
-    </p>
+    </p> -->
 
     <h4>Stalk me on</h4>
-    <p><a href="https://twitter.com/creativespooks" target="_blank">Twitter</a>&ensp;·&ensp;<a
+    <p><a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>&ensp;·&ensp;
+      <a href="https://twitter.com/creativespooks" target="_blank">Twitter</a>&ensp;·&ensp;<a
         href="https://dribbble.com/creativespooks" target="_blank">Dribbble</a>&ensp;·&ensp;<a
         href="https://github.com/creativespooks" target="_blank">Github</a>&ensp;·&ensp;<a
         href="https://instagram.com/boredoomandstuff" target="_blank">Instagram</a></p>
