--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
     <p>
       📍 Senior Product Designer at Spotify, based in London.
     <br />
-      📮 Interested in collaborating on side-projects or ask for advice? Write me at <a
-        href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me&body=Hi%20Riccardo%2C%0D%0A%0D%0A">riccardo.buzzotta@gmail.com</a>
-      or
+      📮 Interested in collaborating on side-projects or ask for advice? <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>
+      or contact me on
       <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>.
     </p>
   </section>
