--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       📍 Senior Product Designer at Spotify, based in London.
     <br />
       📮 Interested in collaborating on side-projects or ask for advice? <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>
-      or contact me on
+      or write me on
       <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>.
     </p>
   </section>
