--- a/index.html
+++ b/index.html
@@ -71,13 +71,14 @@
   <section class="container container--content">
     <h4>About me</h4>
     <p>Creative Agency, 4-people start-up, hypergrowth company, 14K+ employees corporation, freelance Product consultant. Kind of tried them all here!</p>
-    <p>2020 goals: read more books, get some decent exercise done, and launch at least two side-projects I've been cooking up for too long.</p>
+
     <p>Like many millenials
       I enjoy travel, and I've grown to appreaciate brunch (my parents still can't understand the allure of it). <br>
       What I enjoy the most though is the <em>boring stuff</em>. Meeting friends for long walks, read, draw, import Italian
       biscotti and other <span title="grandma, in Italian">nonna</span> goods whenever I can. 🍪
     </p>
-
+    <p>2020 goals: <del>read more books, get some decent exercise done, and launch at least two side-projects I've been cooking up for too long</del> make it sanely out of a global pandemic. 😅</p>
+    
 <!--     <h4>Let's get in touch</h4>
     <p>Feel free to send me emails and candies at: <a
         href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me&body=Hi%20Riccardo%2C%0D%0A%0D%0A">riccardo.buzzotta@gmail.com</a>
