--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       passionate about all things Strategy, Future industries, and your good 'ol upcoming OKR planning session (you know it's coming!).
     </p>
     <p>
-      📍 Senior Product Designer at Spotify, based in London.
+      📍 &nbsp;Senior Product Designer at Spotify, based in London.
     <br />
-      📮 Interested in collaborating on side-projects or ask for advice? <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>
+      📮 &nbsp;Interested in collaborating on side-projects or ask for advice? <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>
       or write me on
       <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>.
     </p>
