--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </p>
     <p class="the-important-stuff">
       Design and Product are my daily bread and butter. I like coding and prototyping, doodling, and I am
-      passionate about all things Strategy, Future industries, and your good 'ol upcoming OKR planning session (you know it's coming!).
+      passionate about all things Strategy, industries of the future, and your good 'ol upcoming OKR planning session (you know it's coming!).
     </p>
     <p>
       📍 &nbsp;Senior Product Designer at Spotify, based in London.
