--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     
 <!--     <h4>Let's get in touch</h4>
     <p>Feel free to send me emails and candies at: <a
-        href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me&body=Hi%20Riccardo%2C%0D%0A%0D%0A">riccardo.buzzotta@gmail.com</a>
+        href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">riccardo.buzzotta@gmail.com</a>
       or
       <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>
     </p> -->
