--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <p>
       📍 &nbsp;Senior Product Designer at Spotify, based in London.
     <br />
-      📮 &nbsp;Interested in collaborating on side-projects or ask for advice? <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>
+      📮 &nbsp;Interested in collaborating or getting advice? <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>
       or write me on
       <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>.
     </p>
