--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section class="container container--content">
     <h4>Welcome to my little website 👋</h4>
     <p class="lead the-important-stuff">
-      Creator of chaos on my desk. Designing products with purpose.
+      Creator of chaos on my desk, designing products with purpose.
     </p>
     <p class="the-important-stuff">
       Design and Product are my daily bread and butter. I like coding and prototyping, doodling, and I am
@@ -73,7 +73,7 @@
     <p>Creative Agency, 4-people start-up, hypergrowth company, 14K+ employees corporation, freelance Product consultant. Kind of tried them all here!</p>
 
     <p>Like many millenials
-      I enjoy travel, and I've grown to appreaciate brunch (my parents still can't understand the allure of it). <br>
+      I enjoy travel, and I've grown to appreaciate brunch and all that jazz. <br>
       What I enjoy the most though is the <em>boring stuff</em>. Meeting friends for long walks, read, draw, import Italian
       biscotti and other <span title="grandma, in Italian">nonna</span> goods whenever I can. 🍪
     </p>
