--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 
   <section class="container container--content">
     <h4>About me</h4>
-    <p>Creative Agency, 4-people start-up, hypergrowth company, 14K+ employees corporation, freelance Product consultant. Kind of tried them all here!</p>
+    <p>Creative Agency, 4-people start-up, hypergrowth stage company, 14K+ employees corporation, freelance Product consultant. Kind of tried them all here!</p>
 
-    <p>Like many millenials
-      I enjoy travel, and I've grown to appreaciate brunch and all that jazz. <br>
+    <p>Like many millennials
+      I enjoy travel, and I've grown to appreciate brunch and all that jazz. <br>
       What I enjoy the most though is the <em>boring stuff</em>. Meeting friends for long walks, read, draw, import Italian
       biscotti and other <span title="grandma, in Italian">nonna</span> goods whenever I can. 🍪
     </p>
