--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <section class="container container--content">
     <h4>About me</h4>
-    <p>Creative Agency, 4-people start-up, hypergrowth stage company, 14K+ employees corporation, freelance Product consultant. Kind of tried them all here!</p>
+    <p>I've worked at creative agencies, 4-people start-ups, hypergrowth stage companies, 14K+ employees corporations, done Product consulting and always learned something valuable out of each experience, taking it with me to the next adventure.</p>
 
     <p>Like many millennials
       I enjoy travel, and I've grown to appreciate brunch and all that jazz. <br>
