--- a/index.html
+++ b/index.html
@@ -46,25 +46,29 @@
   <section class="container container--header">
     <h3 class="logo">Riccardo Buzzotta</h3>
     <p>
-      Product Designer with a focus on Product Managent.
+      Design and Product. Angel investor. <br>
+      In love with the future.
     </p>
   </section>
 
   <section class="container container--content">
-    <h4>Welcome to my little website 👋</h4>
+    <!-- <h4>Welcome to my little website 👋</h4> -->
     <p class="lead the-important-stuff">
       Creator of chaos on my desk, designing products with purpose.
+    </p>
+    <p class="the-important-stuff">
+      I work with early-stage startups to help them validate early assumptions, build their MVPs, and finesse their roadmaps.
     </p>
     <p class="the-important-stuff">
       Design and Product are my daily bread and butter. I like coding and prototyping, doodling, and I am
       passionate about all things Strategy, industries of the future, and your good 'ol upcoming OKR planning session (you know it's coming!).
     </p>
     <p>
-      📍 &nbsp;Senior Product Designer at Spotify, based in London.
+      📍 &nbsp;Founder and Partner at <a href="//sillylabs.co">Silly Labs</a>. Currently based in London/Milan.
     <br />
-      📮 &nbsp;Interested in collaborating or getting advice? <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>
+      📮 &nbsp;Interested in collaborating or talking about your project? <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>
       or write me on
-      <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>.
+      <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>. Or <a href="https://calendly.com/riccardo-buzzotta/30min">book a call now</a>.
     </p>
   </section>
 
