--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <div class="page-wrapper">
   <section class="container container--header mt-xl">
-<svg class="intro" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
+    <img src="./avatar-optimized.jpg" alt="" style="width:96px; height: 96px; border-radius: 96px;">
+<!-- <svg class="intro" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
   <g class="g g1" fill="none" fill-rule="evenodd">
     <path fill="#0D7FF2" d="M14,0 C21.7319865,-1.42034288e-15 28,6.2680135 28,14 L28,28 L28,28 L14,28 C6.2680135,28 9.46895252e-16,21.7319865 0,14 C-9.46895252e-16,6.2680135 6.2680135,1.42034288e-15 14,0 Z"/>
     <g class="e" fill="#031A30" transform="translate(4 8)">
@@ -40,24 +41,24 @@
         <rect width="4" height="4" x="12" rx="2"/>
       </g>
     </g>
-</svg>
+</svg> -->
     
   </section>
   <section class="container container--header">
     <h3 class="logo">Riccardo Buzzotta</h3>
     <p>
+      Design and Product, in love with the future.
+    </p>
+    <!-- <p>
       Design and Product. Angel investor. <br>
       In love with the future.
-    </p>
+    </p> -->
   </section>
 
   <section class="container container--content">
     <!-- <h4>Welcome to my little website 👋</h4> -->
     <p class="lead the-important-stuff">
-      Creator of chaos on my desk, designing products with purpose.
-    </p>
-    <p class="the-important-stuff">
-      I work with early-stage startups to help them validate early assumptions, build their MVPs, and finesse their roadmaps.
+      I work with and invest in early-stage startups to help them start, validate, scale-up their products.
     </p>
     <p class="the-important-stuff">
       Design and Product are my daily bread and butter. I like coding and prototyping, doodling, and I am
@@ -66,9 +67,8 @@
     <p>
       📍 &nbsp;Founder and Partner at <a href="//sillylabs.co">Silly Labs</a>. Currently based in London/Milan.
     <br />
-      📮 &nbsp;Interested in collaborating or talking about your project? <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>
-      or write me on
-      <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>. Or <a href="https://calendly.com/riccardo-buzzotta/30min">book a call now</a>.
+      📮 &nbsp;I'd love to learn about your project, collaborate. <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>, write me on
+      <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>, or <a href="https://calendly.com/riccardo-buzzotta/30min">book a 30 mins call now</a>.
     </p>
   </section>
 
@@ -81,7 +81,6 @@
       What I enjoy the most though is the <em>boring stuff</em>. Meeting friends for long walks, read, draw, import Italian
       biscotti and other <span title="grandma, in Italian">nonna</span> goods whenever I can. 🍪
     </p>
-    <p>2020 goals: <del>read more books, get some decent exercise done, and launch at least two side-projects I've been cooking up for too long</del> make it sanely out of a global pandemic. 😅</p>
     
 <!--     <h4>Let's get in touch</h4>
     <p>Feel free to send me emails and candies at: <a
