--- a/index.html
+++ b/index.html
@@ -11,54 +11,20 @@
 
   <div class="page-wrapper">
   <section class="container container--header mt-xl">
-    <img src="./avatar-optimized.jpg" alt="" style="width:96px; height: 96px; border-radius: 96px;">
-<!-- <svg class="intro" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
-  <g class="g g1" fill="none" fill-rule="evenodd">
-    <path fill="#0D7FF2" d="M14,0 C21.7319865,-1.42034288e-15 28,6.2680135 28,14 L28,28 L28,28 L14,28 C6.2680135,28 9.46895252e-16,21.7319865 0,14 C-9.46895252e-16,6.2680135 6.2680135,1.42034288e-15 14,0 Z"/>
-    <g class="e" fill="#031A30" transform="translate(4 8)">
-      <rect width="4" height="4" rx="2"/>
-      <rect width="4" height="4" x="12" rx="2"/>
-    </g>
-  </g>
-    <g class="g g2" transform="translate(32)">
-      <path fill="#FFD633" d="M0,0 L14,0 C21.7319865,-1.42034288e-15 28,6.2680135 28,14 C28,21.7319865 21.7319865,28 14,28 C6.2680135,28 9.46895252e-16,21.7319865 0,14 L0,0 L0,0 Z"/>
-      <g class="e" fill="#332900" transform="translate(8 16)">
-        <rect width="4" height="4" rx="2"/>
-        <rect width="4" height="4" x="12" rx="2"/>
-      </g>
-    </g>
-    <g class="g g3" transform="translate(0 32)">
-      <path fill="#FF4766" d="M14,0 C21.7319865,-1.42034288e-15 28,6.2680135 28,14 C28,21.7319865 21.7319865,28 14,28 L0,28 L0,28 L0,14 C-9.46895252e-16,6.2680135 6.2680135,1.42034288e-15 14,0 Z"/>
-      <g class="e" fill="#330009" transform="translate(8 8)">
-        <rect width="4" height="4" rx="2"/>
-        <rect width="4" height="4" x="12" rx="2"/>
-      </g>
-    </g>
-    <g class="g g4" transform="translate(32 32)">
-      <path fill="#DEE6ED" d="M14,0 L28,0 L28,0 L28,14 C28,21.7319865 21.7319865,28 14,28 C6.2680135,28 9.46895252e-16,21.7319865 0,14 C-9.46895252e-16,6.2680135 6.2680135,1.42034288e-15 14,0 Z"/>
-      <g class="e" fill="#121A21" transform="translate(4 16)">
-        <rect width="4" height="4" rx="2"/>
-        <rect width="4" height="4" x="12" rx="2"/>
-      </g>
-    </g>
-</svg> -->
+
     
   </section>
   <section class="container container--header">
+        <img src="./avatar-optimized.jpg" alt="" style="width:120px; height: 120px; border-radius: 120px;">
     <h3 class="logo">Riccardo Buzzotta</h3>
     <p>
       Design and Product, in love with the future.
     </p>
-    <!-- <p>
-      Design and Product. Angel investor. <br>
-      In love with the future.
-    </p> -->
   </section>
 
   <section class="container container--content">
-    <!-- <h4>Welcome to my little website 👋</h4> -->
-    <p class="lead the-important-stuff">
-      I work with and invest in early-stage startups to help them start, validate, scale-up their products.
+        <p class="the-important-stuff">
+I work with and invest in early-stage startups to help them start, validate, scale-up their products.
     </p>
     <p class="the-important-stuff">
       Design and Product are my daily bread and butter. I like coding and prototyping, doodling, and I am
@@ -72,43 +38,5 @@
     </p>
   </section>
 
-  <section class="container container--content">
-    <h4>About me</h4>
-    <p>I've worked at creative agencies, 4-people start-ups, hypergrowth stage companies, 14K+ employees corporations, done Product consulting and always learned something valuable out of each experience, taking it with me to the next adventure.</p>
-
-    <p>Like many millennials
-      I enjoy travel, and I've grown to appreciate brunch and all that jazz. <br>
-      What I enjoy the most though is the <em>boring stuff</em>. Meeting friends for long walks, read, draw, import Italian
-      biscotti and other <span title="grandma, in Italian">nonna</span> goods whenever I can. 🍪
-    </p>
-    
-<!--     <h4>Let's get in touch</h4>
-    <p>Feel free to send me emails and candies at: <a
-        href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">riccardo.buzzotta@gmail.com</a>
-      or
-      <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>
-    </p> -->
-
-    <h4>Stalk me on</h4>
-    <p><a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>&ensp;·&ensp;
-      <a href="https://twitter.com/creativespooks" target="_blank">Twitter</a>&ensp;·&ensp;<a
-        href="https://dribbble.com/creativespooks" target="_blank">Dribbble</a>&ensp;·&ensp;<a
-        href="https://github.com/creativespooks" target="_blank">Github</a>&ensp;·&ensp;<a
-        href="https://instagram.com/boredoomandstuff" target="_blank">Instagram</a></p>
-  </section>
-
-  <footer class="container container--footer mt-xl">
-    <p> <br> </p>
-    <p>👉 
-      <em>I'm currently rebuilding my website using GatsbyJS to accomodate for a little blog section.</em>
-    </p>
-  </footer>
-</div>
-
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-146127916-1', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 </html>
