--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@ I work with and invest in early-stage startups to help them start, validate, sca
       passionate about all things Strategy, industries of the future, and your good 'ol upcoming OKR planning session (you know it's coming!).
     </p>
     <p>
-      📍 &nbsp;Founder and Partner at <a href="//sillylabs.co">Silly Labs</a>. Currently based in London/Milan.
-    <br />
-      📮 &nbsp;I'd love to learn about your project, collaborate. <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>, write me on
-      <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>, or <a href="https://calendly.com/riccardo-buzzotta/30min">book a 30 mins call now</a>.
+      Founder and Partner at <a href="//sillylabs.co">Silly Labs</a>. Currently based in London/Milan.</p><p>
+      Interested in chatting? I'd love to learn about your project, collaborate together. <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>, write me on
+      <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>, or feel free to <a href="https://calendly.com/riccardo-buzzotta/30min">book a 30 mins call now</a>.
     </p>
   </section>
 
