--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 I work with and invest in early-stage startups to help them start, validate, scale-up their products.
     </p>
     <p class="the-important-stuff">
-      Design and Product are my daily bread and butter. I like coding and prototyping, doodling, and I am
-      passionate about all things Strategy, industries of the future, and your good 'ol upcoming OKR planning session (you know it's coming!).
+      I've worked at creative agencies, 2-people start-ups or in hypergrowth stage, 14K+ employees corporations, too. 💃 Design and Product are my daily bread and butter. 🧈 I like coding and prototyping, doodling, and I am
+      passionate about all things Strategy, industries of the future (web3, agtech, healthtech, and more). 🚀
     </p>
     <p>
       Founder and Partner at <a href="//sillylabs.co">Silly Labs</a>. Currently based in London/Milan.</p><p>
-      Interested in chatting? I'd love to learn about your project, collaborate together. <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>, write me on
+      Interested in chatting? I'd love to learn about your project, collaborate together. 🙋 <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>, write me on
       <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>, or feel free to <a href="https://calendly.com/riccardo-buzzotta/30min">book a 30 mins call now</a>.
     </p>
   </section>
