--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 I work with and invest in early-stage startups to help them start, validate, scale-up their products.
     </p>
     <p class="the-important-stuff">
-      I've worked at creative agencies, 2-people start-ups or in hypergrowth stage, 14K+ employees corporations, too. 💃 Design and Product are my daily bread and butter. 🧈 I like coding and prototyping, doodling, and I am
+      Design and Product are my daily bread and butter. 🧈 I like coding and prototyping, doodling, and I am
       passionate about all things Strategy, industries of the future (web3, agtech, healthtech, and more). 🚀
     </p>
     <p>
