--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </section>
   <section class="container container--header">
         <img src="./avatar-optimized.jpg" alt="" style="width:120px; height: 120px; border-radius: 120px;">
-    <h3 class="logo">Riccardo Buzzotta</h3>
+    <h3 class="headline">Riccardo Buzzotta</h3>
     <p>
       Design and Product, in love with the future.
     </p>
