make links open in new windows, tabs

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -85,5 +85,16 @@ What started with the idea of lower costs for Customer Care ended up becoming a 
   </section>
 
 
+  <script>
+    // get all links
+    var links = document.links;
+
+    // make them open in a new window/tab
+    for (var i = 0; i < links.length; i++) {
+      links[i].target = "_blank";
+    }
+
+    // got lazy 🤷
+  </script>
 </body>
 </html>
