fix some broken CSS, add cal.com link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ I work with and invest in early-stage startups to help them start, validate, sca
       Founder and Partner at <a href="//sillylabs.co">Silly Labs</a>. Currently based in London/Milan.</p><p>
       Interested in chatting? I'd love to learn about your project, collaborate together. 🙋 <br>
       <a href="mailto:riccardo.buzzotta@gmail.com?subject=Message%20from%20rcbz.me">Email me</a>, write me on
-      <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>, or feel free to <a href="https://calendly.com/riccardo-buzzotta/30min">book a 30 mins call now</a>.
+      <a href="https://linkedin.com/in/riccardobuzz" target="_blank">Linkedin</a>, or feel free to <a href="https://cal.com/rccbzz/30min">book a short call</a> now.
     </p>
   </section>
 
