--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@
     <br>
   </section>
   <section class="container container--header">
-    <h1 class="">Portolio links</h1>
+    <h1 class="">Portfolio links</h1>
     <p class="lead">
       Selected work across Design, Product, and more.
     </p>
